--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "tailwind-merge": "^2.5.5",
         "tailwindcss": "^3.4.1",
         "tailwindcss-animate": "^1.0.7",
+        "toastr": "^2.1.4",
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
